# softdev-methodologies-lab4

.github/workflows/: pytest.yml
cluster/: .gitignore  Makefile  main.py  protocols.py  pyproject.toml
cluster/manager/: main.py
cluster/node/: datastore.py  doubly_linked_list.py  test_datastore.py
web_panel/: package-lock.json  package.json
